// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for closed step which remains a current step 1`] = `
<ContainerConstructor
  componentRef={null}
  project={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
      "hasParticipativeStep": false,
      "id": "1",
      "links": Object {
        "external": null,
      },
      "steps": Array [
        Object {
          "endAt": "2016-12-28T09:00:24+01:00",
          "startAt": "2016-12-20T09:00:24+01:00",
          "status": "CLOSED",
          "timeless": null,
          "title": "Closed step",
          "type": "presentation",
          "url": "http://capco/closed-step1/show-link",
        },
        Object {
          "endAt": "2017-01-28T09:00:24+01:00",
          "startAt": "2017-01-20T09:00:24+01:00",
          "status": "CLOSED",
          "timeless": null,
          "title": "closed step 2",
          "type": "presentation",
          "url": "http://capco/closed-step2/show-link",
        },
        Object {
          "endAt": "2017-12-28T09:00:24+01:00",
          "startAt": "2017-12-20T09:00:24+01:00",
          "status": "FUTURE",
          "timeless": null,
          "title": "Future step 1",
          "type": "presentation",
          "url": "http://capco/future-step1/show-link",
        },
      ],
      "title": "Name of my project",
      "url": "http://capco/show-link",
    }
  }
/>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for future project 1`] = `
<ContainerConstructor
  componentRef={null}
  project={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
      "hasParticipativeStep": false,
      "id": "1",
      "links": Object {
        "external": null,
      },
      "steps": Array [
        Object {
          "endAt": "2017-12-28T09:00:24+01:00",
          "startAt": "2017-12-20T09:00:24+01:00",
          "status": "FUTURE",
          "timeless": null,
          "title": "Future step 1",
          "type": "presentation",
          "url": "http://capco/future-step1/show-link",
        },
        Object {
          "endAt": "2018-01-28T09:00:24+01:00",
          "startAt": "2018-01-20T09:00:24+01:00",
          "status": "FUTURE",
          "timeless": null,
          "title": "Future step 2",
          "type": "presentation",
          "url": "http://capco/future-step2/show-link",
        },
      ],
      "title": "Name of my project",
      "url": "http://capco/show-link",
    }
  }
/>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for open participative step 1`] = `
<ContainerConstructor
  componentRef={null}
  project={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
      "hasParticipativeStep": true,
      "id": "1",
      "links": Object {
        "external": null,
      },
      "steps": Array [
        Object {
          "endAt": null,
          "startAt": null,
          "status": "CLOSED",
          "timeless": null,
          "title": "Closed step",
          "type": null,
          "url": "",
        },
        Object {
          "endAt": "2018-11-28T09:00:24+01:00",
          "startAt": "2017-11-20T09:00:24+01:00",
          "status": "OPENED",
          "timeless": false,
          "title": "Open step 2",
          "type": "collect",
          "url": "http://capco/step2/show-link",
        },
        Object {
          "endAt": "2017-11-25T09:00:24+01:00",
          "startAt": "2017-01-10T09:00:24+01:00",
          "status": "OPENED",
          "timeless": false,
          "title": "Open step 1",
          "type": "collect",
          "url": "http://capco/step1/show-link",
        },
        Object {
          "endAt": null,
          "startAt": null,
          "status": "FUTURE",
          "timeless": null,
          "title": "Future step",
          "type": null,
          "url": "",
        },
      ],
      "title": "Name of my project",
      "url": "http://capco/show-link",
    }
  }
/>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for open step (with no actual participative step) 1`] = `
<ContainerConstructor
  componentRef={null}
  project={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
      "hasParticipativeStep": true,
      "id": "1",
      "links": Object {
        "external": null,
      },
      "steps": Array [
        Object {
          "endAt": null,
          "startAt": null,
          "status": "CLOSED",
          "timeless": null,
          "title": "Closed step",
          "type": null,
          "url": "",
        },
        Object {
          "endAt": "2018-11-28T09:00:24+01:00",
          "startAt": "2017-11-20T09:00:24+01:00",
          "status": "OPENED",
          "timeless": false,
          "title": "Open step 2",
          "type": "collect",
          "url": "http://capco/step2/show-link",
        },
        Object {
          "endAt": "2017-11-25T09:00:24+01:00",
          "startAt": "2017-01-10T09:00:24+01:00",
          "status": "OPENED",
          "timeless": false,
          "title": "Open step 1",
          "type": "collect",
          "url": "http://capco/step1/show-link",
        },
        Object {
          "endAt": null,
          "startAt": null,
          "status": "FUTURE",
          "timeless": null,
          "title": "Future step",
          "type": null,
          "url": "",
        },
      ],
      "title": "Name of my project",
      "url": "http://capco/show-link",
    }
  }
/>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for timeless step 1`] = `
<ContainerConstructor
  componentRef={null}
  project={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
      "hasParticipativeStep": false,
      "id": "1",
      "links": Object {
        "external": "http://capco/external-link",
      },
      "steps": Array [
        Object {
          "endAt": null,
          "startAt": null,
          "status": "CLOSED",
          "timeless": null,
          "title": "Closed step",
          "type": null,
          "url": "",
        },
        Object {
          "endAt": "2017-11-25T09:00:24+01:00",
          "startAt": "2017-11-10T09:00:24+01:00",
          "status": "OPENED",
          "timeless": false,
          "title": "Open step",
          "type": "presentation",
          "url": "http://capco/step/show-link",
        },
        Object {
          "endAt": null,
          "startAt": null,
          "status": "OPENED",
          "timeless": true,
          "title": "timeless step",
          "type": "collect",
          "url": "http://capco/timeless-step/show-link",
        },
        Object {
          "endAt": null,
          "startAt": null,
          "status": "FUTURE",
          "timeless": null,
          "title": "Future step",
          "type": null,
          "url": "",
        },
      ],
      "title": "Name of my project",
      "url": "http://capco/show-link",
    }
  }
/>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body with h2 title & elements for closed step 1`] = `
<ContainerConstructor
  componentRef={null}
  hasSecondTitle={true}
  project={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
      "hasParticipativeStep": false,
      "id": "1",
      "links": Object {
        "external": null,
      },
      "steps": Array [
        Object {
          "endAt": "2016-12-28T09:00:24+01:00",
          "startAt": "2016-12-20T09:00:24+01:00",
          "status": "CLOSED",
          "timeless": null,
          "title": "Closed step",
          "type": "presentation",
          "url": "http://capco/closed-step1/show-link",
        },
        Object {
          "endAt": "2017-01-28T09:00:24+01:00",
          "startAt": "2017-01-20T09:00:24+01:00",
          "status": "CLOSED",
          "timeless": null,
          "title": "closed step 2",
          "type": "presentation",
          "url": "http://capco/closed-step2/show-link",
        },
      ],
      "title": "Name of my project",
      "url": "http://capco/show-link",
    }
  }
/>
`;
